# loco-mujoco-models

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
atlas/: atlas.xml
bd_spot/: spot.xml
booster_t1/: booster_t1.xml
loco_mujoco_models/: __init__.py
loco_mujoco_models/anybotics_anymal_c/: anymal_c.xml
loco_mujoco_models/apptronik_apollo/: apptronik_apollo.xml
loco_mujoco_models/fourier_gr1t2/: gr1t2.xml
loco_mujoco_models/skeleton/: skeleton_torque.xml
loco_mujoco_models/talos/: talos.xml
loco_mujoco_models/toddlerbot/: LICENSE
loco_mujoco_models/unitree_h1_2/: h1_2.xml
toddlerbot/: toddlerbot.xml
unitree_a1/: unitree_a1.xml
unitree_go2/: go2.xml
